constraints/poddisruptionbudget.yaml
---
# METADATA
# title: Constraint to limit silly PodDisruptionBudgets
# description: >-
#   Utilises ConstraintTemplate to limit Deployment of PodDisruptionBudgets with .spec.maxUnavailable == 0
#   This will prevent PodDisruptionBudgets from blocking voluntary disruptions such as node draining.
#   See template here - https://raw.githubusercontent.com/open-policy-agent/gatekeeper-library/0d74f529c8c2ba509cf077518d0f72c0c48440f9/library/general/poddisruptionbudget/template.yaml
#   Sample Constraint - https://raw.githubusercontent.com/open-policy-agent/gatekeeper-library/0d74f529c8c2ba509cf077518d0f72c0c48440f9/library/general/poddisruptionbudget/samples/poddisruptionbudget/constraint.yaml
#
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodDisruptionBudget
metadata:
  name: pod-distruption-budget
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "ReplicaSet", "StatefulSet"]
      - apiGroups: ["policy"]
        kinds: ["PodDisruptionBudget"]
      - apiGroups: [""]
        kinds: ["ReplicationController"]
