constraints/storageclass.yaml
---
# METADATA
# title: Constraint to require specifying storage
# description: >-
#   Utilises ConstraintTemplate that requires storage classes to be specified when used. Only Gatekeeper 3.9+ is supported.
#   See template here - https://raw.githubusercontent.com/open-policy-agent/gatekeeper-library/0d74f529c8c2ba509cf077518d0f72c0c48440f9/library/general/poddisruptionbudget/template.yaml
#   Sample Constraint - https://raw.githubusercontent.com/open-policy-agent/gatekeeper-library/0d74f529c8c2ba509cf077518d0f72c0c48440f9/library/general/poddisruptionbudget/samples/poddisruptionbudget/constraint.yaml
#
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sStorageClass
metadata:
  name: storageclass
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["PersistentVolumeClaim"]
      - apiGroups: ["apps"]
        kinds: ["StatefulSet"]
  parameters:
    includeStorageClassesInMessage: true
